# logic-gate-simulator

./: Cargo.toml  README.md
assets/shaders/: background_grid.wgsl
src/: main.rs
src/items/: and.rs  input.rs  light.rs  mod.rs  nand.rs  nor.rs  not.rs  or.rs  xnor.rs  xor.rs
src/plugins/: background.rs  camera.rs  menu.rs  minimap.rs  mod.rs  window.rs
